# diagram-forge

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.plan-reviews/diagram-forge/: plan-review-1-completeness.md  plan-review-1-sequencing.md  plan-review-2-risk.md  plan-review-2-scopecreep.md  plan-review-3-coherence.md  plan-review-3-testability.md  prd-align-1-goals.md  prd-align-1-requirements.md  prd-align-2-constraints.md  prd-align-2-nongoals.md  prd-align-3-openquestions.md  prd-align-3-userstories.md  review-summary.md
.prd-reviews/diagram-forge/: ambiguity.md  feasibility.md  gaps.md  prd-draft.md  prd-review.md  requirements.md  scope.md  stakeholders.md  state.env
designs/diagram-forge/: api.md  data.md  design-doc.md  integration.md  scale.md  security.md  ux.md
spikes/phase0-excalidraw-spike/: README.md  run_spike.py  run_spike_2step.py
spikes/phase0-excalidraw-spike/prompts/: architecture.md  flowchart.md  sequence.md
src/diagram_forge/: main.py
src/diagram_forge/ai/: client.py
src/diagram_forge/api/: auth.py  errors.py  routes.py  schemas.py
src/diagram_forge/cli/: main.py
src/diagram_forge/exporters/: drawio.py  excalidraw.py  svg.py
src/diagram_forge/models/: job.py
src/diagram_forge/pipeline/: text.py
src/diagram_forge/services/: circuit_breaker.py  rate_limiter.py  storage.py
src/diagram_forge/utils/: logging.py  prompts.py
src/diagram_forge/web/: ui.html
tests/unit/: test_circuit_breaker.py  test_exporters.py  test_pipeline.py  test_schemas.py
